packages/aries_vcx/lib/src/_generated/agency_client_generated.io.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Generated by `flutter_rust_bridge`@ 1.61.1.
// ignore_for_file: non_constant_identifier_names, unused_element, duplicate_ignore, directives_ordering, curly_braces_in_flow_control_structures, unnecessary_lambdas, slash_for_doc_comments, prefer_const_literals_to_create_immutables, implicit_dynamic_list_literal, duplicate_import, unused_import, unnecessary_import, prefer_single_quotes, prefer_const_constructors, use_super_parameters, always_use_package_imports, annotate_overrides, invalid_use_of_protected_member, constant_identifier_names, invalid_use_of_internal_member

import 'dart:convert';
import 'dart:async';
import 'package:meta/meta.dart';
import 'package:flutter_rust_bridge/flutter_rust_bridge.dart';
import 'agency_client_generated.dart';
export 'agency_client_generated.dart';
import 'dart:ffi' as ffi;

class AgencyClientPlatform extends FlutterRustBridgeBase<AgencyClientWire> {
  AgencyClientPlatform(ffi.DynamicLibrary dylib)
      : super(AgencyClientWire(dylib));

// Section: api2wire

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_String(String raw) {
    return api2wire_uint_8_list(utf8.encoder.convert(raw));
  }

  @protected
  ffi.Pointer<wire_AgencyClientConfig>
      api2wire_box_autoadd_agency_client_config(AgencyClientConfig raw) {
    final ptr = inner.new_box_autoadd_agency_client_config_0();
    _api_fill_to_wire_agency_client_config(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<wire_AgentProvisionConfig>
      api2wire_box_autoadd_agent_provision_config(AgentProvisionConfig raw) {
    final ptr = inner.new_box_autoadd_agent_provision_config_0();
    _api_fill_to_wire_agent_provision_config(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_opt_String(String? raw) {
    return raw == null ? ffi.nullptr : api2wire_String(raw);
  }

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_uint_8_list(Uint8List raw) {
    final ans = inner.new_uint_8_list_0(raw.length);
    ans.ref.ptr.asTypedList(raw.length).setAll(0, raw);
    return ans;
  }
// Section: finalizer

// Section: api_fill_to_wire

  void _api_fill_to_wire_agency_client_config(
      AgencyClientConfig apiObj, wire_AgencyClientConfig wireObj) {
    wireObj.agency_did = api2wire_String(apiObj.agencyDid);
    wireObj.agency_endpoint = api2wire_String(apiObj.agencyEndpoint);
    wireObj.agency_verkey = api2wire_String(apiObj.agencyVerkey);
    wireObj.remote_to_sdk_did = api2wire_String(apiObj.remoteToSdkDid);
    wireObj.remote_to_sdk_verkey = api2wire_String(apiObj.remoteToSdkVerkey);
    wireObj.sdk_to_remote_did = api2wire_String(apiObj.sdkToRemoteDid);
    wireObj.sdk_to_remote_verkey = api2wire_String(apiObj.sdkToRemoteVerkey);
  }

  void _api_fill_to_wire_agent_provision_config(
      AgentProvisionConfig apiObj, wire_AgentProvisionConfig wireObj) {
    wireObj.agency_did = api2wire_String(apiObj.agencyDid);
    wireObj.agency_verkey = api2wire_String(apiObj.agencyVerkey);
    wireObj.agency_endpoint = api2wire_String(apiObj.agencyEndpoint);
    wireObj.agent_seed = api2wire_opt_String(apiObj.agentSeed);
  }

  void _api_fill_to_wire_box_autoadd_agency_client_config(
      AgencyClientConfig apiObj, ffi.Pointer<wire_AgencyClientConfig> wireObj) {
    _api_fill_to_wire_agency_client_config(apiObj, wireObj.ref);
  }

  void _api_fill_to_wire_box_autoadd_agent_provision_config(
      AgentProvisionConfig apiObj,
      ffi.Pointer<wire_AgentProvisionConfig> wireObj) {
    _api_fill_to_wire_agent_provision_config(apiObj, wireObj.ref);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.

/// generated by flutter_rust_bridge
class AgencyClientWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AgencyClientWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AgencyClientWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>(
          'get_dart_object');
  late final _get_dart_object =
      _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          'drop_dart_object');
  late final _drop_dart_object =
      _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>(
          'new_dart_opaque');
  late final _new_dart_opaque =
      _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_update_webhook_url(
    int port_,
    ffi.Pointer<wire_uint_8_list> webhook_url,
  ) {
    return _wire_update_webhook_url(
      port_,
      webhook_url,
    );
  }

  late final _wire_update_webhook_urlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_update_webhook_url');
  late final _wire_update_webhook_url = _wire_update_webhook_urlPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_create_agency_client_for_main_wallet(
    int port_,
    ffi.Pointer<wire_AgencyClientConfig> config,
  ) {
    return _wire_create_agency_client_for_main_wallet(
      port_,
      config,
    );
  }

  late final _wire_create_agency_client_for_main_walletPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64, ffi.Pointer<wire_AgencyClientConfig>)>>(
      'wire_create_agency_client_for_main_wallet');
  late final _wire_create_agency_client_for_main_wallet =
      _wire_create_agency_client_for_main_walletPtr.asFunction<
          void Function(int, ffi.Pointer<wire_AgencyClientConfig>)>();

  void wire_provision_cloud_agent(
    int port_,
    ffi.Pointer<wire_AgentProvisionConfig> config,
  ) {
    return _wire_provision_cloud_agent(
      port_,
      config,
    );
  }

  late final _wire_provision_cloud_agentPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64, ffi.Pointer<wire_AgentProvisionConfig>)>>(
      'wire_provision_cloud_agent');
  late final _wire_provision_cloud_agent = _wire_provision_cloud_agentPtr
      .asFunction<void Function(int, ffi.Pointer<wire_AgentProvisionConfig>)>();

  ffi.Pointer<wire_AgencyClientConfig>
      new_box_autoadd_agency_client_config_0() {
    return _new_box_autoadd_agency_client_config_0();
  }

  late final _new_box_autoadd_agency_client_config_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_AgencyClientConfig> Function()>>(
      'new_box_autoadd_agency_client_config_0');
  late final _new_box_autoadd_agency_client_config_0 =
      _new_box_autoadd_agency_client_config_0Ptr
          .asFunction<ffi.Pointer<wire_AgencyClientConfig> Function()>();

  ffi.Pointer<wire_AgentProvisionConfig>
      new_box_autoadd_agent_provision_config_0() {
    return _new_box_autoadd_agent_provision_config_0();
  }

  late final _new_box_autoadd_agent_provision_config_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_AgentProvisionConfig>
              Function()>>('new_box_autoadd_agent_provision_config_0');
  late final _new_box_autoadd_agent_provision_config_0 =
      _new_box_autoadd_agent_provision_config_0Ptr
          .asFunction<ffi.Pointer<wire_AgentProvisionConfig> Function()>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_AgencyClientConfig extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> agency_did;

  external ffi.Pointer<wire_uint_8_list> agency_endpoint;

  external ffi.Pointer<wire_uint_8_list> agency_verkey;

  external ffi.Pointer<wire_uint_8_list> remote_to_sdk_did;

  external ffi.Pointer<wire_uint_8_list> remote_to_sdk_verkey;

  external ffi.Pointer<wire_uint_8_list> sdk_to_remote_did;

  external ffi.Pointer<wire_uint_8_list> sdk_to_remote_verkey;
}

class wire_AgentProvisionConfig extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> agency_did;

  external ffi.Pointer<wire_uint_8_list> agency_verkey;

  external ffi.Pointer<wire_uint_8_list> agency_endpoint;

  external ffi.Pointer<wire_uint_8_list> agent_seed;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<ffi.Bool Function(DartPort, ffi.Pointer<ffi.Void>)>>;
typedef DartPort = ffi.Int64;
